# aoc2025

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/scripts/: update_benchmarks.py
.github/workflows/: benchmark.yml  ci.yml
src/: lib.rs
